--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,3 +1,8 @@
-extends: airbnb
+extends:
+  - airbnb
+  - plugin:flowtype/recommended
+parser: babel-eslint
+plugins:
+  - flowtype
 rules:
   class-methods-use-this: off
