--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-node6": "^11.0.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.0",
+    "babel-preset-flow": "^6.23.0",
     "chai": "^4.0.2",
-    "eslint": "^3.19.0",
+    "eslint": "^3",
     "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.48.0",
     "mocha": "^3.4.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
